--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "vitest/importMeta"
+    ],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
